[tool.poetry]
name = "spacephotos"
version = "0.1.0"
description = ""
authors = ["DKonst21 <104372191+DKonst21@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
schedule = "^1.1.0"
telegram = "^0.0.1"
requests = "^2.28.2"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
